--- a/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
+++ b/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
@@ -1,7 +1,7 @@
 <section class="quickInvest">
     <form name="quickInvestForm1" novalidate>
         <div class="content-main-header">
-            <div class="slider-entry-image">
+            <div class="slider-entry-image col-xs-12 col-lg-1 col-md-2 col-sm-2">
                 <img src="assets/images/planInvestMent.png">
             </div>
             <h1 class="pull-left slider-description">Quick Invest</h1>
