--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -1,3 +1,6 @@
+<div class="mobile_goal_header visible-xs-block" >
+	<p class="text-center no-margin">Recommended Schemes</p>
+</div>
 <section class="recommended">
 	<div class="recommended-table-section">
 		<div class="pull-right indicator-cover retirement" ng-if="$root.currentGoal == 'retirement'">
