--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -96,12 +96,12 @@
 				</ul>
 				<div class="chart-cover scheme-pie" ng-show="setChartValue == 'SCHEME'" custom-scroll-bar>
 					<div class="col-xs-12">
-						<div class="col-xs-6 scheme-chart">
+						<div class="col-xs-12 col-lg-6 scheme-chart">
 							<div class="row">
 								<scheme-chart title="pieTitle" items="resultPercentage" colors="colors"></scheme-chart>
 							</div>
 						</div>
-						<div class="col-xs-6 trackPerformanceLegendCont no-padding">
+						<div class="col-xs-12 col-lg-6 trackPerformanceLegendCont no-padding">
 						<div class="trackPerformanceLegends col-xs-12 no-padding">
 							<p ng-repeat="legend in legends" class="no-padding col-xs-6 no-padding"><span class="content"></span><span class="legend-cover">
 								<span class="legend-cover">
