--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -98,6 +98,9 @@ section{
 				margin-bottom:0px;
 				margin-top:0px;
 			}
+			@media @below768{
+				width:100%;
+			}
 		}
 		.goals-cover{
 			cursor:pointer;
