--- a/less/modal.less
+++ b/less/modal.less
@@ -1,6 +1,10 @@
 #equiDeptModal{
 	.modal-dialog{
 		width:35%;
+		@media @below768{
+			width: 100%;
+			position: relative;
+		}
 		.modal-wrapper{
 			padding:2% 5% 6% 5%;
 			h2{
