--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -169,6 +169,9 @@ section{
 					float:none;
 					width:15%;
 					padding:20px 0px;
+					@media @below600{
+						width: 100%;
+					}
 				}
 			}
 			h4{
@@ -211,7 +214,7 @@ section{
   width:100%;
   float:left;
   .slider-entry-image{
-    width:10%;
+    /*width:10%;*/
     float:left;
     img{
       width:100%;
