--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -299,6 +299,9 @@ section{
 					margin-top: 50%;
 					float: left;
 					padding: 0;
+					@media @below768{
+						margin-top: 6%;
+					}
 					p{
 						
 						float: left;
@@ -377,6 +380,10 @@ section{
 				a{
 					font-size:13px;
 				}				
+			}
+			@media @below768{
+				margin-top: 22px;
+				text-align:center
 			}
 		}
 	}
