--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -78,7 +78,7 @@
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" ng-click="goToWithdraw()">
 					<div class="image-div">
-						<img class="" src="assets/images/Withdraw.png">
+						<img class="" src="assets/images/withdraw.png">
 					</div>
 					<!-- <div class="checkbox-cover" ng-if="user_flags.invest_redeem">
 						<input type="radio" name>
