--- a/app/modules/goals/modules/education/views/education.html
+++ b/app/modules/goals/modules/education/views/education.html
@@ -1,3 +1,6 @@
+<div class="mobile_goal_header visible-xs-block" >
+	<p class="text-center no-margin">Define your goal</p>
+</div>
 <section class="fadeIn swiper-outer-cover">
 	<swiper swiper-name="education" controller-name="educationController" callmodal-fn="showEquityModal()" indicator-end="Education"></swiper>
 </section>
