--- a/app/modules/goals/modules/education/views/educationStarted.html
+++ b/app/modules/goals/modules/education/views/educationStarted.html
@@ -1,4 +1,4 @@
-<section class="fadeIn quickInvest">
+<section class="fadeIn quickInvest education">
     <form name="quickInvestForm1" novalidate>
         <div class="content-main-header">
             <div class="slider-entry-image">
