--- a/app/modules/smartportfolio/views/schemeFactsheet.html
+++ b/app/modules/smartportfolio/views/schemeFactsheet.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="form-group">
 			<div class="row">
-				<div class="col-xs-6">
+				<div class="col-lg-6 col-xs-12">
 					<p class="text-center">{{$root.factsheetData.scheme_details.risk}}</p>
 					<p><img class="img img-responsive" src="assets/images/moderate.png" ng-if="$root.factsheetData.scheme_details.risk == 'Moderate Risk'"/></p>
 					<p><img class="img img-responsive" src="assets/images/moderatelyHigh.png" ng-if="$root.factsheetData.scheme_details.risk == 'Moderate High Risk'"/></p>
@@ -26,7 +26,7 @@
 					<p><img class="img img-responsive" src="assets/images/high.png" ng-if="$root.factsheetData.scheme_details.risk == 'High Risk'"/></p>
 					<p>Investors understand that their principal will be at {{$root.factsheetData.scheme_details.risk}}</p>
 				</div>
-				<div class="col-xs-5 pull-right">
+				<div class="col-lg-5 col-xs-12 pull-right">
 					<p class="text-right"><span class="sensex-status fg-red">{{$root.factsheetData.scheme_details.day_end_nav}}</span></p>
 
 					<p class="fg-red text-right"><span class="sensex-down"></span>{{$root.factsheetData.scheme_details.day_change_nav}}</p>
