--- a/less/gettingStarted.less
+++ b/less/gettingStarted.less
@@ -61,6 +61,9 @@
     float:left;
     width:44%;
     padding-left:5%;
+    @media @below768{
+      width: 100%;
+    }
     .fin-app-btn{
       width: 35%;
       margin-right: 3%;
