--- a/less/swiper.less
+++ b/less/swiper.less
@@ -12,6 +12,12 @@
         top: 160px;
         width:20px;
         z-index: 10;
+        @media @below768{
+          -webkit-box-orient: horizontal;
+          flex-direction: row;
+          width: 100%;
+          top: 0;
+        }
     }
     .dot{
       width:4px;
@@ -25,6 +31,9 @@
         position:relative;
         &:not(:last-child){
             padding-bottom:100%;
+            @media @below768{
+              padding:0 57px 0 0;
+            }
         }
     }
     .dot-cover:not(:last-child) .dot:after{
@@ -50,11 +59,20 @@
                 position:absolute;
                 top: -4px;
                 right: 19px;
+                @media @below768{
+                  right:1px;
+                  top: 8px;
+                }
             }
         }
     }
     .dot-cover:not(:last-child) .dot.ani:after{
-      height:100%
+      height:100%;
+      @media @below768{
+        width:91px;
+        height: 1px;
+        top: 2px;
+      }
     }
     .dot.active,.dot.ani{
       background-color:#f26422;
@@ -67,17 +85,29 @@
         position:absolute;
         top:0px;
         right:0px;
+        @media @below768{
+          left:0%;
+          top: 6%;
+          width: 100% !important;
+        }
         .image-backdrop{
           text-align:right;
           img{
             width:80%;
           }
           margin-bottom:10%;
+          @media @below768{
+            width: 171px;
+            margin: 0 auto;
+          }
         }
         p{
           .GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
           .PIXEL2EM(16);
           text-align:right;     
+          @media @below768{
+            text-align: center;
+          }
         }
       } 
 
@@ -137,6 +167,10 @@
             .fin-btn-white{
               position:absolute;
               right:-35%;
+              @media @below768{
+                position: relative;
+                left: 0;
+              }
             }
           }
         }
@@ -144,6 +178,11 @@
       &.education{
         .typeSwiper{
           width:84px;
+          .image-backdrop{
+            @media @below768{
+
+            }
+          }
         }
       }
       &.property{
@@ -218,6 +257,12 @@
         padding-bottom:12%;
         padding-top:6%;
         transition:all 0.2s ease;
+        @media @below768{
+          padding-top: 62%;
+          margin-bottom: 12%;
+          float: left;
+          width: 100%;
+        }
         p{
           .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
           .PIXEL2EM(18);
@@ -395,6 +440,10 @@
           padding-bottom:10%;
           width:80%;
           float:left;
+          @media @below768{
+            padding-top:62%;
+            width: 100%;
+          }
           .score-header{
             padding:2.5%;
             margin-top:1%;
@@ -459,6 +508,9 @@
             }
             .time-image{
               margin-top:20%;
+              @media @below768{
+                margin-top: 50%;
+              }
               img{
                 width:100%;
               }
@@ -509,6 +561,9 @@
               padding-bottom:5%;
               border:3px solid #f0f4f7;
               cursor:pointer;
+              @media @below768{
+                margin-bottom: 21px;
+              }
               .image-div{
                 padding-top: 20%;
                 padding-bottom: 0px;
@@ -596,6 +651,14 @@
           width:34%;
           position:absolute;
           bottom:5%;
+          @media @below768{
+            width: 100%;
+            margin-top: 5%;
+            bottom: 0%;
+            .content-next{
+              bottom: 0;
+            }
+          }
         }
         &.answer-more{
            width:50%;
@@ -614,6 +677,9 @@
             .fin-link-btn{
               margin-top:0px;
             }
+           }
+           @media @below768{
+            width:100%;
            }
         }        
       } 
@@ -636,10 +702,16 @@
   padding-top: 1%!important;
   padding-left: 1%;
   padding-right: 1%;
+  @media @below768{
+    padding-top: 50% !important;
+  }
   .gauge-result{
     width:35%;
     margin-right:6%;
     float:left; 
+    @media @below768{
+      width: 100%;
+    }
     .result-header{
       padding-bottom:5%;
       p{
@@ -660,6 +732,9 @@
     &:last-child{
       margin-right:0px;
       width:40%;
+      @media @below768{
+        width: 100%;
+      }
       .meter-widget-cover{
         height:456px;
         padding-left: 7%;
@@ -706,9 +781,16 @@
   .fin-btn-group{
     margin-top:5%;
     width:70%;
+    @media @below768{
+      width: 100%;
+    }
     .fin-app-btn,.fin-link-btn{
       width:23%;
       padding:1.5%;
+      @media @below768{
+        width: 100%;
+        padding: 4%
+      }
     }
     button{
       &:first-child{
